AUS-3238 Fix ugly tab line overlap in Firefox

--- a/project/src/styles.scss
+++ b/project/src/styles.scss
@@ -387,7 +387,7 @@ label {
 
 .nav-tabs {
     border-bottom-color: $text-highlight-colour;
-    padding-bottom: 7px;
+    padding-bottom: 8px;
     margin-top: 10px;
 }
 
